# gsab

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: publish.yml  security.yml  tests.yml
auth/: authenticator.py
core/: connection.py  schema.py  sheet_manager.py
examples/realtime-demo/: README.md  index.html  server.py
examples/realtime-demo/video/: README.md  STORYBOARD.md  VIDEO-FRAMEWORK.md  VO-script.md  launch-copy.md
exceptions/: custom_exceptions.py
gsheets_db/: __init__.py
src/gsab/: __init__.py
src/gsab/auth/: __init__.py  authenticator.py  resolver.py
src/gsab/cli/: __init__.py
src/gsab/cookbook/: charts.py  dashboard.py  encryption.py  import_csv.py  realtime_api.py  server_side_query.py  upsert.py
src/gsab/core/: connection.py  policy.py  query.py  schema.py  sheet_manager.py
src/gsab/exceptions/: __init__.py  custom_exceptions.py
src/gsab/mcp/: __init__.py  server.py
src/gsab/skills/gsab/: SKILL.md  recipes.md  reference.md
src/gsab/skills/gsab-fastapi/: SKILL.md
src/gsab/templates/fastapi/: api.py
src/gsab/templates/starter/: README.md  app.py  schema.py
src/gsab/tui/: __init__.py  app.py  model.py
src/gsab/utils/: __init__.py  encryption.py  errors.py  quota_monitor.py  update_check.py
src/gsab/web/: __init__.py  app.py  auth.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client_config.py  test_crud.py  test_encryption.py  test_errors.py  test_gsheets_db.py  test_installation.py  test_mcp.py  test_policy.py  test_query.py  test_sheet_manager.py  test_tui.py  test_update_check.py
utils/: encryption.py  quota_monitor.py
web/: app.py  auth.py
web/static/: styles.css
web/templates/: index.html
